feat(对象创建模式&&继承模式): 对象创建模式&&继承模式学习&&复习闭包和作用域链等

--- a/04-作用域与作用域链/05-作用域链面试题2.html
+++ b/04-作用域与作用域链/05-作用域链面试题2.html
@@ -19,7 +19,8 @@
           console.log(this);
           console.log(this.fn2);
 
-          // 此时在函数fn2内部去找其是否存在fn2函数，结果找不到，然后就去全局中寻找,
+          // 此时在函数fn2内部去找其是否存在fn2函数，而不是fn2 这一个属性，
+          // 此时在obj 对象内部的fn2为对象的属性，只是说这个属性的属性值是一个函数，结果找不到，然后就去全局中寻找,
           // 而此时的全局作用域中没有定义 fn2()函数，所以找不到
           console.log(fn2);
         },
