--- a/05-闭包/02-闭包.html
+++ b/05-闭包/02-闭包.html
@@ -13,7 +13,7 @@
         2. 闭包到底是什么?
         * 使用chrome调试查看
         * 理解一: 闭包是嵌套的内部函数(绝大部分人)
-        * 理解二: 内部函数中包含被引用变量(函数)的对象(极少数人)
+        * 理解二: 内部函数中包含被引用变量(函数)的对象(极少数人)，闭包是一个对象，是保存在内部函数中的对象，这个对象中包含了被引用的变量(函数)
         * 注意: 闭包存在于嵌套的内部函数中
         3. 产生闭包的条件?
         * 函数嵌套
