--- a/04-作用域与作用域链/04-作用域链面试题.html
+++ b/04-作用域与作用域链/04-作用域链面试题.html
@@ -18,7 +18,7 @@
       }
       show(fn); //10
       // 因为fn函数是一个单独的函数作用域，在这个函数作用域中找不到变量 x 的时候会沿着作用域链在全局作用域中去找。
-      // 因为没有闭包，所以 fn()函数 函数作用域中的变量在 show 函数中不能被访问
+      // 在函数定义的时候作用域链就已经确定了，和函数的调用没有关系
     </script>
   </body>
 </html>
